--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <img class="slide dNone" src="./img/05.webp" alt="">
         </div>
 
-        <button id="btnBack">Avanti</button>
-        <button id="btnNext">Indietro</button>
+        <button id="btnBack">Indietro</button>
+        <button id="btnNext">Avanti</button>
 
     </div>
 
